infra/k8s/base/tce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: tce.mrcute.space
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tce-service
                port:
                  number: 8210
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tce-frontend
                port:
                  number: 80
